[gd_scene load_steps=53 format=3 uid="uid://do61x5km3wthk"]

[ext_resource type="Script" uid="uid://cl0gojhg0kcc5" path="res://entities/player/player.gd" id="1_oc1sr"]
[ext_resource type="PackedScene" uid="uid://cnhiimq1hl1lc" path="res://scenes/effects/explosions/slam_wave.tscn" id="2_8vg7n"]
[ext_resource type="AudioStream" uid="uid://bmlxxe8maevqb" path="res://audio/streams/click.wav" id="3_bc4c6"]
[ext_resource type="AudioStream" uid="uid://c7enblvm4yyws" path="res://audio/streams/voices/player/hups/hup_1.wav" id="4_vbs1d"]
[ext_resource type="AudioStream" uid="uid://b6d0wnf3jecta" path="res://audio/streams/voices/player/hups/hup_2.wav" id="5_n0kfy"]
[ext_resource type="AudioStream" uid="uid://be3e2ce82sum6" path="res://audio/streams/voices/player/hups/hup_11.wav" id="6_y62bc"]
[ext_resource type="AudioStream" uid="uid://cgm7r4b3kf36q" path="res://audio/streams/voices/player/hups/hup_12.wav" id="7_78eqe"]
[ext_resource type="AudioStream" uid="uid://3nq08mhu7hgj" path="res://audio/streams/voices/player/hups/hup_13.wav" id="8_iijnh"]
[ext_resource type="AudioStream" uid="uid://b6hblfi38ddq4" path="res://audio/streams/voices/player/hups/hup_14.wav" id="9_mgvis"]
[ext_resource type="AudioStream" uid="uid://diwl7b1646pt2" path="res://audio/streams/voices/player/hups/hup_15.wav" id="10_4agbg"]
[ext_resource type="AudioStream" uid="uid://c84847bf2ax0v" path="res://audio/streams/voices/player/hups/hup_16.wav" id="11_26icp"]
[ext_resource type="AudioStream" uid="uid://b6hpblvhs0c4f" path="res://audio/streams/voices/player/hups/hup_17.wav" id="12_2o1ae"]
[ext_resource type="AudioStream" uid="uid://dkfsp11jb2re7" path="res://audio/streams/voices/player/hups/hup_18.wav" id="13_builo"]
[ext_resource type="AudioStream" uid="uid://c7nmgkuq6q1sw" path="res://audio/streams/voices/player/hups/hup_3.wav" id="14_l86ry"]
[ext_resource type="AudioStream" uid="uid://d32mev28nulxc" path="res://audio/streams/voices/player/hups/hup_4.wav" id="15_3ylfy"]
[ext_resource type="AudioStream" uid="uid://b8wlssmljrw50" path="res://audio/streams/voices/player/hups/hup_5.wav" id="16_11jj7"]
[ext_resource type="AudioStream" uid="uid://btd2d2qsxkhjo" path="res://audio/streams/voices/player/hups/hup_6.wav" id="17_huicy"]
[ext_resource type="AudioStream" uid="uid://bmpwrksg7upyb" path="res://audio/streams/voices/player/hups/hup_7.wav" id="18_rgpvh"]
[ext_resource type="AudioStream" uid="uid://ccqxt72tfs7xh" path="res://audio/streams/voices/player/hups/hup_8.wav" id="19_pqa85"]
[ext_resource type="AudioStream" uid="uid://cxjgdawg2i02r" path="res://audio/streams/voices/player/hups/hup_9.wav" id="20_d3qcc"]
[ext_resource type="AudioStream" uid="uid://chxa831hh5rn7" path="res://audio/streams/voices/player/hups/hup_10.wav" id="21_eej2s"]
[ext_resource type="Script" uid="uid://bkq7cu8xd4t8t" path="res://entities/player/player_status.gd" id="22_pxs5m"]
[ext_resource type="AudioStream" uid="uid://c4letg1n03lmd" path="res://audio/streams/voices/player/damage_placeholder.wav" id="23_y5wvn"]
[ext_resource type="PackedScene" uid="uid://wfllsui4k1if" path="res://scenes/effects/gibs/player_gibs.tscn" id="24_222pa"]
[ext_resource type="PackedScene" uid="uid://qy044barx365" path="res://entities/stair_stepper.tscn" id="25_rotfo"]
[ext_resource type="Script" uid="uid://ce462jr80lued" path="res://entities/player/game_container.gd" id="26_n4fi1"]
[ext_resource type="Shader" uid="uid://cqxb6k0ev762f" path="res://shaders/canvas/post_process/cross_bloom.gdshader" id="27_57n4w"]
[ext_resource type="Shader" uid="uid://dmx2rcuqyoghc" path="res://shaders/canvas/post_process/palette_compress.gdshader" id="28_70won"]
[ext_resource type="CompressedTexture3D" uid="uid://b163qkrvdrxoj" path="res://effects/look_up_tables/3d/neutral.png" id="29_15dgo"]
[ext_resource type="Script" uid="uid://c637rh40s1od1" path="res://entities/player/weapon_manager.gd" id="30_aegsx"]
[ext_resource type="AudioStream" uid="uid://dyub7yfblkj1f" path="res://audio/streams/typewriter.wav" id="31_b0m84"]
[ext_resource type="Texture2D" uid="uid://c0bhiisq4qel1" path="res://entities/player/flashlight_projector.png" id="32_tgokv"]
[ext_resource type="Script" uid="uid://c4rlaihf5gsp" path="res://entities/player/flashlight.gd" id="33_aknmp"]
[ext_resource type="PackedScene" uid="uid://bjpo451a0eupa" path="res://weapons/axe/axe.tscn" id="35_uif20"]
[ext_resource type="PackedScene" uid="uid://bimc4ufk5hicg" path="res://weapons/pump_shotgun/pump_shotgun.tscn" id="36_ytmbf"]
[ext_resource type="AudioStream" uid="uid://crtqyq64m3wm1" path="res://audio/streams/ambient/bullet_ambient.wav" id="37_0ygxn"]
[ext_resource type="PackedScene" uid="uid://dh4rwigqkk6va" path="res://ui/hud/player_hud.tscn" id="37_wd13u"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ww5sc"]
random_pitch = 1.15
streams_count = 1
stream_0/stream = ExtResource("3_bc4c6")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_yxu58"]
random_pitch = 1.15
streams_count = 18
stream_0/stream = ExtResource("4_vbs1d")
stream_1/stream = ExtResource("5_n0kfy")
stream_2/stream = ExtResource("14_l86ry")
stream_3/stream = ExtResource("15_3ylfy")
stream_4/stream = ExtResource("16_11jj7")
stream_5/stream = ExtResource("17_huicy")
stream_6/stream = ExtResource("18_rgpvh")
stream_7/stream = ExtResource("19_pqa85")
stream_8/stream = ExtResource("20_d3qcc")
stream_9/stream = ExtResource("21_eej2s")
stream_10/stream = ExtResource("6_y62bc")
stream_11/stream = ExtResource("7_78eqe")
stream_12/stream = ExtResource("8_iijnh")
stream_13/stream = ExtResource("9_mgvis")
stream_14/stream = ExtResource("10_4agbg")
stream_15/stream = ExtResource("11_26icp")
stream_16/stream = ExtResource("12_2o1ae")
stream_17/stream = ExtResource("13_builo")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2aq05"]
radius = 0.49
height = 1.98

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_h4h3k"]
radius = 0.49
height = 0.98

[sub_resource type="SphereShape3D" id="SphereShape3D_wps46"]
radius = 0.45

[sub_resource type="CapsuleMesh" id="CapsuleMesh_iu3ba"]
flip_faces = true
radial_segments = 8
rings = 1

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_uyctv"]
random_pitch = 1.25
streams_count = 1
stream_0/stream = ExtResource("23_y5wvn")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7t8ki"]
shader = ExtResource("27_57n4w")
shader_parameter/intensity = 1.0
shader_parameter/threshold = 0.9
shader_parameter/spread = 8

[sub_resource type="GDScript" id="GDScript_rb3tb"]
script/source = "extends ColorRect


func _ready() -> void:
	Globals.settings_changed.connect(_on_globals_settings_changed)
	_on_globals_settings_changed()


func _on_globals_settings_changed() -> void:
	visible = Globals.s_cross_glow_enabled
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1jhb1"]
shader = ExtResource("28_70won")
shader_parameter/mode_is_palette = true
shader_parameter/color_depth = 16.0
shader_parameter/palette = ExtResource("29_15dgo")

[sub_resource type="GDScript" id="GDScript_kfsde"]
script/source = "extends ColorRect


func _ready() -> void:
	Globals.settings_changed.connect(_on_globals_settings_changed)
	_on_globals_settings_changed()


func _on_globals_settings_changed() -> void:
	return
	#visible = Globals.s_palette_compress_enabled
	material.set_shader_parameter(
			\"palette\",
			Globals.get_lut(Globals.s_current_palette),
	)
	material.set_shader_parameter(
			\"color_depth\",
			Globals.s_color_depth
	)
	#material.set_shader_parameter(
			#\"palette_depth\",
			#Globals.s_color_depth
	#)
"

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_d4n5i"]
random_pitch = 1.15
streams_count = 1
stream_0/stream = ExtResource("31_b0m84")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_58b4n"]
transparency = 1
shading_mode = 0
albedo_color = Color(1, 1, 1, 0.0627451)
billboard_mode = 2

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_v43hw"]
emission_shape = 3
emission_box_extents = Vector3(2, 1, 0.5)
direction = Vector3(0, 1, 0)
spread = 0.0
initial_velocity_min = 50.0
initial_velocity_max = 50.0
gravity = Vector3(0, 0, 0)

[sub_resource type="CylinderMesh" id="CylinderMesh_pkwoh"]
top_radius = 0.063
bottom_radius = 0.063
height = 1.0
radial_segments = 4
rings = 0

[node name="Player" type="CharacterBody3D" groups=["players"]]
editor_description = "The player character."
collision_layer = 2
collision_mask = 389
script = ExtResource("1_oc1sr")
slam_wave_scene = ExtResource("2_8vg7n")
interact_stream = SubResource("AudioStreamRandomizer_ww5sc")
jump_stream = SubResource("AudioStreamRandomizer_yxu58")

[node name="PlayerHitbox" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_2aq05")

[node name="PlayerCrouchHitbox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_h4h3k")
disabled = true

[node name="ClearanceCast" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
shape = SubResource("SphereShape3D_wps46")
target_position = Vector3(0, 0.75, 0)
collision_mask = 21

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_ww5sc")
bus = &"Player"

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
layers = 2
cast_shadow = 0
mesh = SubResource("CapsuleMesh_iu3ba")

[node name="Status" type="Node" parent="."]
process_mode = 1
script = ExtResource("22_pxs5m")
injury_stream = SubResource("AudioStreamRandomizer_uyctv")
gib_threshold = 5000.0
damage_multipliers = Array[float]([1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0])
gibs = ExtResource("24_222pa")

[node name="StairStepper" parent="." instance=ExtResource("25_rotfo")]
process_mode = 4

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="Control"]
z_index = -100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stretch = true
stretch_shrink = 2
script = ExtResource("26_n4fi1")

[node name="SubViewport" type="SubViewport" parent="Control/SubViewportContainer"]
handle_input_locally = false
use_occlusion_culling = true
use_hdr_2d = true
canvas_item_default_texture_filter = 0
audio_listener_enable_3d = true
size = Vector2i(960, 540)
render_target_update_mode = 4

[node name="BackBufferCopy" type="BackBufferCopy" parent="Control/SubViewportContainer/SubViewport"]
visible = false
copy_mode = 2

[node name="CrossBloom" type="ColorRect" parent="Control/SubViewportContainer/SubViewport"]
material = SubResource("ShaderMaterial_7t8ki")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = SubResource("GDScript_rb3tb")

[node name="BackBufferCopy2" type="BackBufferCopy" parent="Control/SubViewportContainer/SubViewport"]
visible = false
copy_mode = 2

[node name="PaletteCompress" type="ColorRect" parent="Control/SubViewportContainer/SubViewport"]
visible = false
material = SubResource("ShaderMaterial_1jhb1")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = SubResource("GDScript_kfsde")

[node name="PlayerSync" type="Node3D" parent="Control/SubViewportContainer/SubViewport"]

[node name="PlayerCam" type="Camera3D" parent="Control/SubViewportContainer/SubViewport/PlayerSync" groups=["player_cam"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
doppler_tracking = 2
current = true
fov = 120.0
near = 0.01
far = 1000.0
script = ExtResource("30_aegsx")
weapons = Array[Array]([[NodePath("WeaponsHolder/Axe")], [NodePath("WeaponsHolder/PumpShotgun")], [], [], [], []])
current_category = 1
ammo_types = {
"akm_bullets": 200,
"big_iron_bullets": 15,
"cells": 100,
"coins": 15,
"grenades": 25,
"nails": 100,
"rockets": 10,
"sawblades": 15,
"shells": 50
}
ammo_amounts = {
"akm_bullets": 0,
"big_iron_bullets": 0,
"cells": 0,
"coins": 0,
"grenades": 3,
"nails": 0,
"rockets": 0,
"sawblades": 0,
"shells": 15
}

[node name="RummageStreamPlayer" type="AudioStreamPlayer" parent="Control/SubViewportContainer/SubViewport/PlayerSync/PlayerCam"]
stream = SubResource("AudioStreamRandomizer_d4n5i")
bus = &"Player"

[node name="Flashlight" type="SpotLight3D" parent="Control/SubViewportContainer/SubViewport/PlayerSync/PlayerCam"]
transform = Transform3D(0.996117, 0.0145506, 0.0868242, -0.00695469, 0.99617, -0.0871558, -0.0877598, 0.0862135, 0.992404, 0.2, -0.25, 0)
visible = false
layers = 2
light_color = Color(1, 0.831373, 0.501961, 1)
light_energy = 5.0
light_projector = ExtResource("32_tgokv")
light_bake_mode = 0
light_cull_mask = 4294967291
shadow_enabled = true
spot_range = 50.0
spot_angle = 35.0
script = ExtResource("33_aknmp")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control/SubViewportContainer/SubViewport/PlayerSync/PlayerCam/Flashlight"]
stream = SubResource("AudioStreamRandomizer_ww5sc")
volume_db = -2.5
bus = &"Player"

[node name="Interact" type="RayCast3D" parent="Control/SubViewportContainer/SubViewport/PlayerSync/PlayerCam"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5)
target_position = Vector3(0, 0, -4)
collision_mask = 189
hit_from_inside = true
collide_with_areas = true

[node name="Sightline" type="RayCast3D" parent="Control/SubViewportContainer/SubViewport/PlayerSync/PlayerCam"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5)
target_position = Vector3(0, 0, -1000)
collision_mask = 61
hit_from_inside = true

[node name="SlamWindSys" type="GPUParticles3D" parent="Control/SubViewportContainer/SubViewport/PlayerSync/PlayerCam"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3, -0.5)
visible = false
material_override = SubResource("StandardMaterial3D_58b4n")
lifetime = 0.1
local_coords = true
process_material = SubResource("ParticleProcessMaterial_v43hw")
draw_pass_1 = SubResource("CylinderMesh_pkwoh")

[node name="WindStreamPlayer" type="AudioStreamPlayer" parent="Control/SubViewportContainer/SubViewport/PlayerSync/PlayerCam/SlamWindSys"]
stream = ExtResource("37_0ygxn")
volume_db = 6.0

[node name="WeaponsHolder" type="Node3D" parent="Control/SubViewportContainer/SubViewport/PlayerSync/PlayerCam"]

[node name="Axe" parent="Control/SubViewportContainer/SubViewport/PlayerSync/PlayerCam/WeaponsHolder" instance=ExtResource("35_uif20")]

[node name="PumpShotgun" parent="Control/SubViewportContainer/SubViewport/PlayerSync/PlayerCam/WeaponsHolder" instance=ExtResource("36_ytmbf")]

[node name="HUD" parent="Control" instance=ExtResource("37_wd13u")]
layout_mode = 1

[node name="FloorSnapCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
target_position = Vector3(0, -1.1, 0)
collision_mask = 389

[node name="SlamWaveSpawner" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
